--- a/.github/workflows/release-windows.yml
+++ b/.github/workflows/release-windows.yml
@@ -14,13 +14,13 @@ jobs:
       uses: ./.github/actions/build-windows
       with:
         platform: x64
-        configurations: "Release, Marathon, Marathon 2, Marathon Infinity"
+        configurations: "Release"
         vcpkg_installed_folder: installed-x64-windows
         
     - name: Build archives
       run: |
         cd VisualStudio &&
-        ./dist-windows.ps1 -x64 $true -a1 $true -m1 $true -m2 $true -m3 $true -output_path windows-build-archives
+        ./dist-windows.ps1 -x64 $true -a1 $true -m1 $false -m2 $false -m3 $false -output_path windows-build-archives
     
     - name: Upload
       uses: actions/upload-artifact@v4
